<resources>
    <string name="app_name">Voluntake</string>
    <string name="volunteerLogInTitle">Log In as Volunteer User</string>
    <string name="associationLogInTitle">Log In as Association User</string>
    <string name="LogIn">Log In</string>
    <string name="CreateUser">Sign Up</string>
    <string name="backToMainMenu">Back</string>
    <string name="emailText">Email:</string>
    <string name="firstNameText">First Name:</string>
    <string name="lastNameText">Last Name:</string>
    <string name="addressText">Address:</string>
    <string name="phoneText">Phone Number:</string>
    <string name="birthOfDateText">Birth Date:</string>
    <string name="passwordText">Password:</string>
    <string name="mainActivityVolunteerBTN">Volunteer</string>
    <string name="mainActivityAssociationBTN">Association</string>
    <string name="MainActivityGuestBTN">Guest</string>
    <string name="createAssociationTXT">Create Association User</string>
    <string name="createVolunteerTXT">Create Volunteer User</string>
    <string name="associationNameTXT">Association Name:</string>
    <string name="aboutAssociation">About Association:</string>
    <string name="confirmPasswordTXT">Confirm Password:</string>
    <string name="logOutText">Log Out</string>
    <string name="addVolunteeringPostTXT">Add Volunteering Event</string>
    <string name="EditAssociation">Edit Association Details</string>
    <string name="AssociationPageTXT">Association Page</string>
    <string name="plusBTN">+</string>
    <string name="VolunteerPageTXT">Volunteer Page</string>
    <string name="phoneicon">PhoneIcon</string>
    <string name="edit_details">Edit Details</string>
    <string name="change_picture">Change Picture</string>
    <string name="detailsbackground">detailsBackground</string>
    <string name="countryText">Country:</string>
    <string name="streetText">Street:</string>
    <string name="cityText">City:</string>
    <string name="numberText">Number:</string>
    <string name="chooseText">Choose</string>
    <string name="uploadText">Upload</string>
    <string name="volunteer_pictureText">Change Volunteering Picture</string>
    <string name="updateText">UPDATE</string>
    <string name="locationText">Location:</string>
    <string name="num_of_participantsText">Number of Participants:</string>
    <string name="edit_volunteeringText">Edit Volunteering</string>
    <string name="typeText">Type:</string>
    <string name="descriptionText">Description:</string>
    <string name="nameText">Name:</string>
    <string name="contentText">Content:</string>
    <string name="titleText">Title:</string>
    <string name="create_volunteeringText">Create Volunteering</string>
    <string name="required_number_of_volunteersText">Required Number of Volunteers:</string>
    <string name="type_of_volunteeringText">Type of Volunteering:</string>
    <string name="ageText">Age:</string>
    <string name="quitText">Quit</string>
    <string name="edit_credentials_details_Text">Edit Credentials Details</string>
    <string name="change_emailText">Change Email:</string>
    <string name="change_passwordText">Change Password:</string>
    <string name="current_passwordText">Current Password:</string>
    <string name="new_passwordText">New Password:</string>
    <string name="confirm_new_passwordText">Confirm New Password:</string>
    <string name="inboxText">Inbox</string>
    <string name="searchText">Search</string>
    <string name="fromText">From:</string>
    <string name="volunteering_detailsText">Volunteering Details</string>
    <string name="delete_volunteeringText">Delete Volunteering</string>
    <string name="edit_pictureText">Edit Picture</string>
    <string name="credentialsText">Credentials:</string>
    <string-array name="types">
        <item>animals</item>
        <item>cleaning</item>
        <item>elderly</item>
        <item>children</item>
        <item>homeless</item>
        <item>agriculture</item>
        <item>safeguarding</item>
        <item>food</item>
        <item>health</item>
        <item>disabled people</item>
        <item>other</item>
    </string-array>
</resources>