<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VolunteerLogIn">

    <TextView
        android:id="@+id/volunteerloglntitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volunteerLogInTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />

    <Button
        android:id="@+id/volunteerloginbtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volunteerloglntitle"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/volunteercreateuser"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/CreateUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volunteerloginbtn"
        app:layout_constraintVertical_bias="0.154" />

    <Button
        android:id="@+id/volunteerloginback"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:text="@string/backToMainMenu"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volunteercreateuser"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/volunteeruseremail"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/volunteeruserpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volunteerloglntitle"
        app:layout_constraintVertical_bias="0.765"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/volunteeruserpassword"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/volunteerloginbtn"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/emailtext"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="116dp"
        android:text="@string/emailText"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toEndOf="@+id/volunteeruseremail"
        app:layout_constraintTop_toBottomOf="@+id/volunteerloglntitle"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/passwordtext"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:text="@string/passwordText"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/volunteerloginbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/volunteeruserpassword"
        app:layout_constraintTop_toBottomOf="@+id/emailtext"
        app:layout_constraintVertical_bias="0.326"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>