<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCredentialsAssoc">

    <TextView
        android:id="@+id/title_activity_edit_credentials_assoc"
        android:layout_width="280dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/edit_credentials_details_Text"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/email_activity_edit_credentials_assoc"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="40dp"
        android:inputType="textEmailAddress"
        android:fontFamily="@font/oswald_font_wght"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_activity_edit_credentials_assoc" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/current_passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/change_emailText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_activity_edit_credentials_assoc" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/change_passwordText"
        android:textStyle="bold"
        android:fontFamily="@font/oswald_font_wght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_passwordText"
        android:fontFamily="@font/oswald_font_wght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm_new_passwordText"
        android:fontFamily="@font/oswald_font_wght"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <EditText
        android:id="@+id/current_password_activity_edit_credentials_assoc"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:fontFamily="@font/oswald_font_wght"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_activity_edit_credentials_assoc" />

    <EditText
        android:id="@+id/new_password_activity_edit_credentials_assoc"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:fontFamily="@font/oswald_font_wght"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password_activity_edit_credentials_assoc" />

    <EditText
        android:id="@+id/confirm_password_activity_edit_credentials_assoc"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:inputType="textPassword"
        android:fontFamily="@font/oswald_font_wght"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password_activity_edit_credentials_assoc" />

    <Button
        android:id="@+id/update_btn_activity_edit_credentials_assoc"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_update_1"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/updateText"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_btn_activity_edit_credentials_assoc"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/ic_back_1"
        android:fontFamily="@font/oswald_font_wght"
        android:text="@string/backToMainMenu"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>