<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuestUser">

    <TextView
        android:id="@+id/passwordtext2"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="36dp"
        android:text="סיסמה:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/associationpassword"
        app:layout_constraintTop_toBottomOf="@+id/emailtext2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/emailtext2"
        android:layout_width="60dp"
        android:layout_height="28dp"
        android:layout_marginTop="116dp"
        android:text="@string/emailText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/associationuseremail"
        app:layout_constraintTop_toBottomOf="@+id/associationloglntitle"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/associationuseremail"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associationloglntitle"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/associationpassword"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/associationloginbtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/associationuseremail"
        app:layout_constraintVertical_bias="0.131"
        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/associationloginbtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:text="@string/LogIn"
        app:layout_constraintBottom_toTopOf="@+id/associationcreateuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/associationcreateuser"
        android:layout_width="130dp"
        android:layout_height="51dp"
        android:layout_marginBottom="32dp"
        android:text="@string/CreateUser"
        app:layout_constraintBottom_toTopOf="@+id/associationloginback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/associationloginback"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:text="@string/backToMainMenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/associationloglntitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/associationLogInTitle"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.142" />
</androidx.constraintlayout.widget.ConstraintLayout>